Update EntityOptimizerMod.java